[tool.poetry]
name = "codex"
version = "0.1.0"
description = "Connectome Data Explorer for FlyWire"
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.0.1"
gunicorn = "20.1.0"
requests = "2.28.1"
google-auth = "2.11.0"
user-agents = "2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
