[tool.poetry]
name = "codex"
version = "0.1.0"
description = "Connectome Data Explorer for FlyWire"
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.0.1"
gunicorn = "20.1.0"
requests = "2.28.1"
google-auth = "2.11.0"
user-agents = "2.2.0"
nglui = "2.7.2"
caveclient = "4.20.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^23.1.0"
ruff = "^0.0.246"
python-dotenv = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]  # ignore line length for now